--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "main.js",
       "preload.js",
       "package.json",
-      "python-scripts/file_processor.py"
+      "python-scripts/demo_scrutiny_engine.py"
     ],
     "directories": {
       "buildResources": "assets"
@@ -31,6 +31,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "electron-squirrel-startup": "^1.0.1",
@@ -41,7 +42,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
