--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-table": "^7.8.0",
+    "sweetalert2": "^11.12.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
