--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "crypto-js": "^4.2.0",
     "electron-squirrel-startup": "^1.0.1",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
