--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "main.js",
       "preload.js",
       "package.json",
-      "python-scripts/demo_scrutiny_engine.pyc"
+      "python-scripts/demo_scrutiny_engine.py"
     ],
     "directories": {
       "buildResources": "assets"
@@ -44,6 +44,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-table": "^7.8.0",
+    "sqlite3": "^5.1.7",
     "sweetalert2": "^11.12.3",
     "zod": "^3.23.8"
   },
